--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -9,31 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting pandas\n",
-      "  Using cached pandas-1.1.2-cp38-cp38-manylinux1_x86_64.whl (10.4 MB)\n",
-      "Requirement already satisfied: numpy>=1.15.4 in /usr/lib/python3/dist-packages (from pandas) (1.17.4)\n",
-      "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/lib/python3/dist-packages (from pandas) (2.7.3)\n",
-      "Requirement already satisfied: pytz>=2017.2 in /usr/lib/python3/dist-packages (from pandas) (2019.3)\n",
-      "Installing collected packages: pandas\n",
-      "Successfully installed pandas-1.1.2\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install pandas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,9 +61,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 2 400\n",
+      "4\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "def readTrainDataset(file_name): \n",
     "    global featureNo, classNo, sampleNo \n",
@@ -103,27 +98,8 @@
     "    # print(classLabels)\n",
     "    \n",
     "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "tags": [
-     "outputPrepend"
-    ]
-   },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "4 2 400\n4\n4\n"
-    }
-   ],
-   "source": [
     "readTrainDataset('dataset/trainLinearlySeparable.txt')\n",
-    "print(featureNo)"
+    "print(featureNo)\n"
    ]
   },
   {
@@ -135,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,28 +232,30 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "tags": [
-     "outputPrepend"
-    ]
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "4 2 400\n4\nTraining successfully finished at 399th iteration.\nw: [ 58.66501765   3.84810612   2.15044324 -59.25422028 539.37987791]\n\nExiting training after 1000 steps.\n  sample_no                                     feature_values  actual_class  \\\n0       170  [1.608665812, 3.864370259, 5.29833973, 8.01541...             2   \n1       171  [2.030374637, 4.634829893, 6.940987113, 8.5359...             2   \n2       172  [3.992375845, 8.080901131, 12.34340583, 16.059...             1   \n3       173  [4.159753575, 7.654566962, 11.77586291, 16.585...             1   \n4       174  [2.140333354, 3.668254357, 6.18842916, 8.16284...             2   \n5       175  [4.312450305, 8.084623177, 11.48604125, 15.186...             1   \n6       176  [4.57722904, 8.046616572, 11.29743912, 15.8076...             1   \n7       177  [3.335158198, 8.351921916, 12.63921605, 15.635...             1   \n8       178  [2.068326985, 4.647149543, 6.334827587, 8.0155...             2   \n\n   predicted_class  \n0                1  \n1                1  \n2                2  \n3                2  \n4                1  \n5                2  \n6                2  \n7                2  \n8                1  \n- Accuracy 97.75%\n"
+     "output_type": "stream",
+     "text": [
+      "4 2 400\n",
+      "4\n",
+      "Training successfully finished at 399th iteration.\n",
+      "w: [ 49.48336132   2.83977319  -0.84538888 -53.08101147 471.57055396]\n",
+      "\n",
+      "Exiting training after 1000 steps.\n",
+      "Empty DataFrame\n",
+      "Columns: [sample_no, feature_values, actual_class, predicted_class]\n",
+      "Index: []\n",
+      "- Accuracy 100.0%\n"
+     ]
     }
    ],
    "source": [
-    "test_file_1 = \"./dataset/testLinearlyNonSeparable.txt\"\n",
-    "train_file_1 = \"./dataset/trainLinearlyNonSeparable.txt\"\n",
+    "test_file_1 = \"./dataset/testLinearlySeparable.txt\"\n",
+    "train_file_1 = \"./dataset/trainLinearlySeparable.txt\"\n",
     "\n",
     "readTrainDataset(train_file_1)\n",
     "p = basicPerceptron()\n",
@@ -294,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,9 +295,9 @@
     "                x = np.append(dataset[i], 1)   \n",
     "\n",
     "                dotProduct = np.dot(self.w, x)\n",
-    "                if dotProduct <= 0 and classLabels[i] == 1: \n",
+    "                if dotProduct < 0 and classLabels[i] == 1: \n",
     "                    self.w = self.w + self.learning_rate * x \n",
-    "                    flag = False\n",
+    "                    falg = False\n",
     "                elif dotProduct >= 0 and classLabels[i] == 2: \n",
     "                    self.w = self.w - self.learning_rate * x\n",
     "                    flag = False\n",
@@ -373,96 +351,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "tags": [
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend"
-    ]
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "4 2 400\n4\nTraining stopping at 6 steps\nweight vector [ 1.34938998  0.08130183 -0.20886705 -0.92318656  8.75247766]\nExiting training after 1000 steps.\n  sample_no                                     feature_values  actual_class  \\\n0       170  [1.608665812, 3.864370259, 5.29833973, 8.01541...             2   \n1       171  [2.030374637, 4.634829893, 6.940987113, 8.5359...             2   \n2       172  [3.992375845, 8.080901131, 12.34340583, 16.059...             1   \n3       173  [4.159753575, 7.654566962, 11.77586291, 16.585...             1   \n4       174  [2.140333354, 3.668254357, 6.18842916, 8.16284...             2   \n5       175  [4.312450305, 8.084623177, 11.48604125, 15.186...             1   \n6       176  [4.57722904, 8.046616572, 11.29743912, 15.8076...             1   \n7       177  [3.335158198, 8.351921916, 12.63921605, 15.635...             1   \n8       178  [2.068326985, 4.647149543, 6.334827587, 8.0155...             2   \n\n   predicted_class  \n0                1  \n1                1  \n2                2  \n3                2  \n4                1  \n5                2  \n6                2  \n7                2  \n8                1  \n- Accuracy 97.75%\n"
+     "output_type": "stream",
+     "text": [
+      "4 2 400\n",
+      "4\n",
+      "Training stopping at 2 steps\n",
+      "weight vector [ 0.86693522  0.53063145 -0.50670092 -0.77541172  8.23096644]\n",
+      "Exiting training after 1000 steps.\n",
+      "Empty DataFrame\n",
+      "Columns: [sample_no, feature_values, actual_class, predicted_class]\n",
+      "Index: []\n",
+      "- Accuracy 100.0%\n"
+     ]
     }
    ],
    "source": [
-    "test_file_1 = \"./dataset/testLinearlyNonSeparable.txt\"\n",
-    "train_file_1 = \"./dataset/trainLinearlyNonSeparable.txt\"\n",
+    "test_file_1 = \"./dataset/testLinearlySeparable.txt\"\n",
+    "train_file_1 = \"./dataset/trainLinearlySeparable.txt\"\n",
     "\n",
     "readTrainDataset(train_file_1)\n",
     "p = RewardAndPunishment()\n",
@@ -479,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,27 +473,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "4 2 400\n4\nTraining successfull finished at 399th iteration.\nws: [ 82.66050799   2.5724231   -1.94753393 -90.92531206 824.58392354]\n\nExiting training after 1000 steps.\n- Accuracy 100.0%\n"
+     "output_type": "stream",
+     "text": [
+      "4 2 400\n",
+      "4\n",
+      "Training successfull finished at 399th iteration.\n",
+      "ws: [ 5.00513663e+01  7.23074519e+00  7.59763868e-02 -5.07443259e+01\n",
+      "  4.36352478e+02]\n",
+      "\n",
+      "Exiting training after 1000 steps.\n",
+      "- Accuracy 97.75%\n"
+     ]
     }
    ],
    "source": [
     "test_file_1 = \"./dataset/testLinearlySeparable.txt\"\n",
     "train_file_1 = \"./dataset/trainLinearlySeparable.txt\"\n",
     "\n",
-    "test_file_2 = \"./dataset/testLinearlySeparable.txt\"\n",
-    "train_file_2 = \"./dataset/trainLinearlySeparable.txt\"\n",
+    "test_file_2 = \"./dataset/testLinearlyNonSeparable.txt\"\n",
+    "train_file_2 = \"./dataset/trainLinearlyNonSeparable.txt\"\n",
     "\n",
     "readTrainDataset(train_file_2)\n",
     "p = pocketPerceptron()\n",
     "p.train()\n",
     "p.test(test_file_2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -606,5 +532,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
